[gd_scene load_steps=22 format=3 uid="uid://byipuimt5c0e8"]

[ext_resource type="Script" uid="uid://56bnlwdn71ib" path="res://scripts/overworld.gd" id="1_u2ss0"]
[ext_resource type="Texture2D" uid="uid://cucnqcsomxvmq" path="res://entities/Yuxiel/Yuxiel.png" id="2_3gvrs"]
[ext_resource type="MeshLibrary" uid="uid://bje6ypahlruyk" path="res://backgrounds/MeshLib.tres" id="2_356oe"]
[ext_resource type="Texture2D" uid="uid://hnjfnw2qacoa" path="res://backgrounds/Grass/grass_topcenter.png" id="3_3gvrs"]
[ext_resource type="Texture2D" uid="uid://dqn2yg5hyyq3g" path="res://entities/Zach/Zach.png" id="3_fkyvp"]
[ext_resource type="Texture2D" uid="uid://donoxxf1ncyke" path="res://entities/Ciri/Ciri.png" id="4_qjxaj"]
[ext_resource type="Texture2D" uid="uid://b8qoar5vuwcbx" path="res://entities/Brim/Brim.png" id="5_e184d"]
[ext_resource type="Texture2D" uid="uid://bas2i8a6de2x4" path="res://entities/Zach/zach_art.png" id="8_qjxaj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eab5i"]
atlas = ExtResource("2_3gvrs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkyvp"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="AtlasTexture" id="AtlasTexture_nesqq"]
atlas = ExtResource("3_fkyvp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsky2"]
atlas = ExtResource("4_qjxaj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_255p0"]
atlas = ExtResource("5_e184d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v726c"]
bg_color = Color(0.6, 0.6, 0.6, 0.360784)

[sub_resource type="NavigationMesh" id="NavigationMesh_nyb65"]
sample_partition_type = 1
cell_size = 0.1

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_v726c"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_nyb65"]

[sub_resource type="BoxShape3D" id="BoxShape3D_v726c"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_824ie"]
albedo_texture = ExtResource("3_3gvrs")
uv1_scale = Vector3(3, 2, 1)
texture_filter = 0

[sub_resource type="BoxMesh" id="BoxMesh_omswd"]
material = SubResource("StandardMaterial3D_824ie")

[sub_resource type="LabelSettings" id="LabelSettings_qjxaj"]
font_size = 80

[node name="Overworld" type="Node3D"]
script = ExtResource("1_u2ss0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.819152, -0.260398, 0.51106, 0, 0.891007, 0.453991, -0.573577, -0.371887, 0.72987, 0, 2.57, 0)

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.828119, 0.254485, -0.499456, 0.403472, 0.889147, -0.215932, 0.389139, -0.380334, -0.838998, 0, 2.57, 0)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="FPSLabel" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 60

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -184.5
offset_bottom = 184.5
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Character1" type="TextureRect" parent="HUD/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_eab5i")
expand_mode = 4
stretch_mode = 5

[node name="Button" type="Button" parent="HUD/VBoxContainer/Character1"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0

[node name="Panel" type="Panel" parent="HUD/VBoxContainer/Character1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fkyvp")

[node name="Character2" type="TextureRect" parent="HUD/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_nesqq")
expand_mode = 4
stretch_mode = 5

[node name="Button" type="Button" parent="HUD/VBoxContainer/Character2"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0

[node name="Panel" type="Panel" parent="HUD/VBoxContainer/Character2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fkyvp")

[node name="Character3" type="TextureRect" parent="HUD/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_lsky2")
expand_mode = 4
stretch_mode = 5

[node name="Button" type="Button" parent="HUD/VBoxContainer/Character3"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0

[node name="Panel" type="Panel" parent="HUD/VBoxContainer/Character3"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fkyvp")

[node name="Character4" type="TextureRect" parent="HUD/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_255p0")
expand_mode = 4
stretch_mode = 5

[node name="Button" type="Button" parent="HUD/VBoxContainer/Character4"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0

[node name="Panel" type="Panel" parent="HUD/VBoxContainer/Character4"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fkyvp")

[node name="EscMenu" type="CanvasLayer" parent="."]
visible = false
follow_viewport_enabled = true

[node name="Panel" type="Panel" parent="EscMenu"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v726c")

[node name="Control" type="Control" parent="EscMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="GamePaused" type="Label" parent="EscMenu/Panel/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -264.0
offset_top = -319.0
offset_right = 265.0
offset_bottom = -209.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Game Paused"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="EscMenu/Panel/Control"]
layout_mode = 0
offset_left = -139.0
offset_top = -37.0
offset_right = 139.0
offset_bottom = 127.0
metadata/_edit_group_ = true

[node name="Resume" type="Button" parent="EscMenu/Panel/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Resume"

[node name="Quit" type="Button" parent="EscMenu/Panel/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Quit Game"

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0184283, 1.55115, -0.211121)
navigation_mesh = SubResource("NavigationMesh_nyb65")

[node name="GridMap" type="GridMap" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.144279, -1.43115, 0)
mesh_library = ExtResource("2_356oe")
physics_material = SubResource("PhysicsMaterial_v726c")
cell_size = Vector3(1, 1, 1)
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.144279, -0.221312, 0)
visible = false
physics_material_override = SubResource("PhysicsMaterial_nyb65")
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D"]
shape = SubResource("BoxShape3D_v726c")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D"]
mesh = SubResource("BoxMesh_omswd")

[node name="Dialogue" type="CanvasLayer" parent="."]
visible = false

[node name="Portrait" type="TextureRect" parent="Dialogue"]
offset_left = 1219.0
offset_top = 306.0
offset_right = 1754.0
offset_bottom = 858.0
texture = ExtResource("8_qjxaj")

[node name="DialogueBox" type="Panel" parent="Dialogue"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -326.0
grow_horizontal = 2
grow_vertical = 0

[node name="DialogueText" type="Label" parent="Dialogue/DialogueBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 48.63
offset_top = -55.0
offset_right = 220.63
offset_bottom = 55.0
grow_vertical = 2
text = "Hiya"
label_settings = SubResource("LabelSettings_qjxaj")

[connection signal="pressed" from="EscMenu/Panel/Control/VBoxContainer/Resume" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="EscMenu/Panel/Control/VBoxContainer/Quit" to="." method="_on_quit_button_pressed"]
